--- a/index.html
+++ b/index.html
@@ -58,6 +58,49 @@
         </div>
       </div>
       <!-- CARD ENDS -->
+      <!-- MSBENE CARD STARTS -->
+      <div class="card green">
+        <div class="additional">
+          <div class="user-card">
+            <img class="user-image center"
+            src="https://randomuser.me/api/portraits/med/women/22.jpg" />
+          </div>
+          <div class="more-info">
+            <h1>Bene Wynn</h1>
+            <div class="coords">
+              <span>Web Developer</span>
+              <span>Falls Church, VA</span>
+            </div>
+            <div class="stats">
+              <div>
+                <a class="icon" href="https://twitter.com/AritAmana">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://linkedin.com/in/AritAmana">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://arit.dev">
+                  <i class="fas fa-link"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://github.com/msarit">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="general">
+          <h1>Bene Wynn</h1>
+          <p>Software Engineer. Former Public Health Analyst. Bootcamp Grad. Tech Writer & Speaker. Passionate Mentor to women (especially moms) seeking a career in coding.</p>
+        </div>
+      </div>
+      <!-- CARD ENDS -->
     </div>
   </body>
 </html>
