this commit will add a tile for Amelia

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="https://kit.fontawesome.com/090972f43a.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/090972f43a.js" crossorigin="anonymous"></script>
     <title>Git With It @ TechRebalanced</title>
   </head>
   <body>
@@ -55,6 +55,49 @@
         <div class="general">
           <h1>Arit Amana</h1>
           <p>Software Engineer. Former Public Health Analyst. Bootcamp Grad. Tech Writer & Speaker. Passionate Mentor to women (especially moms) seeking a career in coding.</p>
+        </div>
+      </div>
+      <!-- CARD ENDS -->
+      <!-- AMELIA CARD STARTS -->
+      <div class="card green">
+        <div class="additional">
+          <div class="user-card">
+            <img class="user-image center"
+            src="https://randomuser.me/api/portraits/med/women/92.jpg" />
+          </div>
+          <div class="more-info">
+            <h1>Amelia Snyder</h1>
+            <div class="coords">
+              <span>Data Analyst</span>
+              <span>Washington, DC</span>
+            </div>
+            <div class="stats">
+              <div>
+                <a class="icon" href="https://twitter.com/AritAmana">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://linkedin.com/in/AritAmana">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://arit.dev">
+                  <i class="fas fa-link"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://github.com/msarit">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="general">
+          <h1>Amelia Snyder</h1>
+          <p>Data Analyst on an open data platform promoting sustainable development.</p>
         </div>
       </div>
       <!-- CARD ENDS -->
