--- a/index.html
+++ b/index.html
@@ -58,6 +58,49 @@
         </div>
       </div>
       <!-- CARD ENDS -->
+            <!-- CLARA CARD STARTS -->
+            <div class="card purple">
+              <div class="additional">
+                <div class="user-card">
+                  <img class="user-image center"
+                  src="https://randomuser.me/api/portraits/med/women/53.jpg" />
+                </div>
+                <div class="more-info">
+                  <h1>Clara Sackey</h1>
+                  <div class="coords">
+                    <span>Product Designer</span>
+                    <span>Bethesda, MD</span>
+                  </div>
+                  <div class="stats">
+                    <div>
+                      <a class="icon" href="https://twitter.com/ohhheyclara">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                    </div>
+                    <div>
+                      <a class="icon" href="https://linkedin.com/in/clarasackey">
+                        <i class="fab fa-linkedin"></i>
+                      </a>
+                    </div>
+                    <div>
+                      <a class="icon" href="https://seesackey.com">
+                        <i class="fas fa-link"></i>
+                      </a>
+                    </div>
+                    <div>
+                      <a class="icon" href="https://github.com/casackey">
+                        <i class="fab fa-github"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="general">
+                <h1>Clara Sackey</h1>
+                <p>Product Designer. Former Learning and Development leader. UX/UI Bootcamp Grad. Tech Writer & Speaker. Passionate Mentor to women (especially moms) seeking a career in coding.</p>
+              </div>
+            </div>
+            <!-- Clara CARD ENDS -->
       <!-- MSBENE CARD STARTS -->
       <div class="card green">
         <div class="additional">
