--- a/index.html
+++ b/index.html
@@ -101,6 +101,48 @@
         </div>
       </div>
       <!-- CARD ENDS -->
+      <!-- Tory -->
+            <div class="card green">
+        <div class="additional">
+          <div class="user-card">
+            <img class="user-image center"
+            src="https://randomuser.me/api/portraits/med/women/37.jpg" />
+          </div>
+          <div class="more-info">
+            <h1>Tory Klingenstein</h1>
+            <div class="coords">
+              <span>Software Engineer</span>
+              <span>Washington, DC</span>
+            </div>
+            <div class="stats">
+              <div>
+                <a class="icon" href="https://twitter.com/AritAmana">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://linkedin.com/in/AritAmana">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://arit.dev">
+                  <i class="fas fa-link"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://github.com/msarit">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="general">
+          <h1>Tory Klingenstein</h1>
+          <p>Software Engineer. Former Kindergarten teacher. Student in Software Engineering Immersive at General Assembly.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
