--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="https://kit.fontawesome.com/090972f43a.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/090972f43a.js" crossorigin="anonymous"></script>
     <title>Git With It @ TechRebalanced</title>
   </head>
   <body>
@@ -58,6 +58,51 @@
         </div>
       </div>
       <!-- CARD ENDS -->
+
+      <!-- KSENIA'S CARD STARTS -->
+      <div class="card pink">
+        <div class="additional">
+          <div class="user-card">
+            <img class="user-image center"
+            src="https://randomuser.me/api/portraits/med/women/7.jpg" />
+          </div>
+          <div class="more-info">
+            <h1>Ksenia Rose Lake</h1>
+            <div class="coords">
+              <span>Future Software Engineer</span>
+              <span>Washington, DC</span>
+            </div>
+            <div class="stats">
+              <div>
+                <a class="icon" href="">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://linkedin.com/in/KseniaLake">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="">
+                  <i class="fas fa-link"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://github.com/rose-lake">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="general">
+          <h1>Ksenia Rose Lake</h1>
+          <p>Future Software Engineer. Former Middle School Math Teacher. Data Analytics Bootcamp Grad. Currently enrolled in Java Web Developer Boot Camp. Excited to be back in tech!</p>
+        </div>
+      </div>
+      <!-- CARD ENDS -->
+
       <!-- MSBENE CARD STARTS -->
       <div class="card green">
         <div class="additional">
