Add a tile for Meghan

--- a/index.html
+++ b/index.html
@@ -58,6 +58,49 @@
         </div>
       </div>
       <!-- CARD ENDS -->
+      <!-- MEGHAN CARD STARTS -->
+      <div class="card">
+        <div class="additional">
+          <div class="user-card">
+            <img class="user-image center"
+            src="https://randomuser.me/api/portraits/med/women/53.jpg" />
+          </div>
+          <div class="more-info">
+            <h1>Meghan Cioci</h1>
+            <div class="coords">
+              <span>Aspiring Data Scientist</span>
+              <span>Washington, DC</span>
+            </div>
+            <div class="stats">
+              <div>
+                <a class="icon" href="https://twitter.com/AritAmana">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://linkedin.com/in/AritAmana">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://arit.dev">
+                  <i class="fas fa-link"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://github.com/msarit">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="general">
+          <h1>Meghan Cioci</h1>
+          <p>Ever-curious individual. Learning to navigate the tech space. Lover of dive bars and cheese.</p>
+        </div>
+      </div>
+      <!-- MEGHAN CARD ENDS -->
       <!-- MSBENE CARD STARTS -->
       <div class="card green">
         <div class="additional">
