--- a/index.html
+++ b/index.html
@@ -58,6 +58,49 @@
         </div>
       </div>
       <!-- CARD ENDS -->
+      <!-- Anuradha CARD STARTS -->
+      <div class="card">
+        <div class="additional">
+          <div class="user-card">
+            <img class="user-image center"
+            src="https://pbs.twimg.com/profile_images/1144955263239294978/E6nvjHJ0_400x400.jpg" />
+          </div>
+          <div class="more-info">
+            <h1>Anuradha </h1>
+            <div class="coords">
+              <span>Electrical Design Engineer, To Be Data Analyst</span>
+              <span>Montgomery VLG, MD</span>
+            </div>
+            <div class="stats">
+              <div>
+                <a class="icon" href="https://twitter.com/AritAmana">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://linkedin.com/in/AritAmana">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://arit.dev">
+                  <i class="fas fa-link"></i>
+                </a>
+              </div>
+              <div>
+                <a class="icon" href="https://github.com/msarit">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="general">
+          <h1>Anuradha</h1>
+          <p>To Be Data Analyst. Former Electrical Data Analyst. Bootcamp Grad.</p>
+        </div>
+      </div>
+      <!-- CARD ENDS -->
       <!-- MSBENE CARD STARTS -->
       <div class="card green">
         <div class="additional">
